complete pixel perfect , search , filter by tag

--- a/sass/abstracts/variables/_colors.scss
+++ b/sass/abstracts/variables/_colors.scss
@@ -34,3 +34,4 @@ $color-text-search-field: #63605c;
 $color-number-light-grey: #3d393599;
 $color-text-green:#7bceb1;
 $hot-bg: #e0628754;
+$color-unactive-icon: #74716d;
