--- a/sass/base/elements/_body.scss
+++ b/sass/base/elements/_body.scss
@@ -1,9 +1,11 @@
+
+
 body {
+    scroll-behavior: smooth ;
 	margin: 0;
     padding: 0;
     background: #fff;
     font-family: Roboto,Arial,sans-serif;
     font-size: 10px;
     font-weight: 300;
-	background: $color__background-body; // Fallback for when there is no custom background color defined.
 }
