--- a/sass/components/content/_header.scss
+++ b/sass/components/content/_header.scss
@@ -1,14 +1,19 @@
 .header {
-  box-shadow: 0 0 10px 0 rgba(0, 0, 0, 0.05);
-  background-color: $color-white-text;
-  z-index: 100;
   position: fixed;
-  left: 0;
+  z-index: 100;
   top: 0;
+  left: 0;
   right: 0;
   opacity: 1;
+  -webkit-box-shadow: 0 0 10px 0 rgba(0, 0, 0, 0.05);
+  box-shadow: 0 0 10px 0 rgba(0, 0, 0, 0.05);
+  background-color: $color-white-text;
   &__container {
+    -webkit-box-align: center;
+    -ms-flex-align: center;
     align-items: center;
+    -webkit-box-pack: start;
+    -ms-flex-pack: start;
     justify-content: flex-start;
     min-height: 80px;
   }
@@ -17,47 +22,24 @@
   }
   &__lang-widget {
     position: relative;
-    width: auto;
-    margin-left: 15px;
     display: inline-block;
-
-    &:hover .header__lang-toggle {
-      color: $color__link-hover;
-      & + .header__lang-submenu {
-        visibility: visible;
-        opacity: 1;
-        transition: all 0.3s ease-in-out;
-      }
-      &:before {
-        transform: rotate(45deg);
-        border-top-color: $color__link-hover;
-      }
-    }
+    margin-left: 15px;
+    width: auto;
 
     ul.header__lang-submenu {
       visibility: hidden;
       opacity: 0;
-      transition: all 0.3s ease-in;
-    }
-    .header__lang-toggle:before {
-      content: "";
-      position: absolute;
-      width: 8px;
-      height: 8px;
-      border-left: 1px solid #8b8886;
-      border-top: 1px solid #8b8886;
-      right: 13px;
-      top: calc(50% - 0.27em);
-      transform: rotate(-135deg);
+      -webkit-transition: all 0.3s ease-in;
+      -o-transition: all 0.3s ease-in;
       transition: all 0.3s ease-in;
     }
 
     a {
-      padding: 8px 20px;
       border: none;
-      color: #3d3935;
-      font-weight: 300;
+      padding: 8px 20px;
       font-size: 0.9375rem;
+      font-weight: 300;
+      color: #3d3935;
 
       &.header__lang-toggle {
         padding-right: calc(10px + 1.23em);
@@ -65,21 +47,23 @@
     }
 
     .header__lang-submenu {
-      border-top: none;
+      position: absolute;
       z-index: 9999;
-      padding: 35px 0 10px;
-      background-color: $color-white-text;
+      top: 100%;
+      left: 0;
+      right: 0;
+      margin: 0;
+      border-top: none;
       border-bottom-left-radius: 25px;
       border-bottom-right-radius: 25px;
-      position: absolute;
-      top: 100%;
-      right: 0;
-      left: 0;
-      margin: 0;
+      padding: 35px 0 10px;
+      background-color: $color-white-text;
       list-style-type: none;
       &:hover {
         visibility: visible;
         opacity: 1;
+        -webkit-transition: all 0.3s ease-in-out;
+        -o-transition: all 0.3s ease-in-out;
         transition: all 0.3s ease-in-out;
       }
 
@@ -108,11 +92,44 @@
           bottom: -15px;
           width: 100%;
           height: 15px;
-          background-color: $color-white-text;
           border-bottom-left-radius: 25px;
           border-bottom-right-radius: 25px;
+          background-color: $color-white-text;
         }
       }
+    }
+
+    &:hover .header__lang-toggle {
+      color: $color__link-hover;
+      & + .header__lang-submenu {
+        visibility: visible;
+        opacity: 1;
+        -webkit-transition: all 0.3s ease-in-out;
+        -o-transition: all 0.3s ease-in-out;
+        transition: all 0.3s ease-in-out;
+      }
+      &:before {
+        -webkit-transform: rotate(45deg);
+        -ms-transform: rotate(45deg);
+        transform: rotate(45deg);
+        border-top-color: $color__link-hover;
+      }
+    }
+    .header__lang-toggle:before {
+      content: "";
+      position: absolute;
+      top: calc(50% - 0.27em);
+      right: 13px;
+      -webkit-transform: rotate(-135deg);
+      -ms-transform: rotate(-135deg);
+      transform: rotate(-135deg);
+      -webkit-transition: all 0.3s ease-in;
+      -o-transition: all 0.3s ease-in;
+      transition: all 0.3s ease-in;
+      border-left: 1px solid #8b8886;
+      border-top: 1px solid #8b8886;
+      width: 8px;
+      height: 8px;
     }
   }
   &__navigation {
@@ -120,19 +137,21 @@
     &-btn {
       position: relative;
       display: none;
-      cursor: pointer;
+      border-radius: 50px;
       width: 60px;
       height: 60px;
-      border-radius: 50px;
       background-color: $color__link-hover;
+      cursor: pointer;
       & > * {
-        height: 1px;
         position: absolute;
-        width: 22px;
-        display: block;
-        background-color: #fff;
         left: 18px;
+        display: block;
+        -webkit-transition: all 0.4s;
+        -o-transition: all 0.4s;
         transition: all 0.4s;
+        height: 1px;
+        width: 22px;
+        background-color: #fff;
       }
       :nth-child(1) {
         top: 35%;
@@ -146,55 +165,69 @@
       }
       &.change > {
         :nth-child(1) {
+          -webkit-transform: rotate(-45deg) translate(-5px, 6px);
+          -ms-transform: rotate(-45deg) translate(-5px, 6px);
           transform: rotate(-45deg) translate(-5px, 6px);
         }
         :nth-child(2) {
           opacity: 0;
         }
         :nth-child(3) {
+          -webkit-transform: rotate(45deg) translate(-5px, -8px);
+          -ms-transform: rotate(45deg) translate(-5px, -8px);
           transform: rotate(45deg) translate(-5px, -8px);
         }
       }
     }
     &-wrap {
+      -webkit-transition: all 0.3s ease-in-out;
+      -o-transition: all 0.3s ease-in-out;
       transition: all 0.3s ease-in-out;
     }
     &-menu {
+      display: -webkit-box;
+      display: -ms-flexbox;
       display: flex;
+      -webkit-box-align: center;
+      -ms-flex-align: center;
       align-items: center;
+      -webkit-transition: all 0.3s ease-in-out;
+      -o-transition: all 0.3s ease-in-out;
       transition: all 0.3s ease-in-out;
       :nth-last-child(2) {
-         margin-right: 18px;
+        margin-right: 18px;
       }
       &__item {
-        color: #3d3935;
         margin-right: 20px;
+        color: #3d3935;
         &.header__navigation-menu__item--border {
           margin-right: 0;
           a {
             display: inline-block;
-            height: 44px;
-            line-height: 44px;
-            border-radius: 28px;
-            padding: 0 17px;
-            border: 1px solid $color-menu-btn--border;
-            color: $color__link-hover;
-            background-color: transparent;
+            -webkit-transition: all 0.3s ease-in-out;
+            -o-transition: all 0.3s ease-in-out;
             transition: all 0.3s ease-in-out;
+            border: 1px solid $color-menu-btn--border;
+            border-radius: 28px;
+            height: 44px;
+            padding: 0 17px;
+            background-color: transparent;
+            line-height: 44px;
+            color: $color__link-hover;
           }
           :hover {
-            color: $color-white-text;
             border-color: $color__link-hover;
             background-color: $color__link-hover;
+            color: $color-white-text;
           }
         }
         a {
+          position: relative;
           padding: 0;
-          font-weight: 300;
           font-size: 1rem;
           line-height: 4;
+          font-weight: 300;
           letter-spacing: 0.2px;
-          position: relative;
         }
       }
     }
@@ -204,67 +237,79 @@
 @media only screen and (max-width: 992px) {
   .header {
     &__container {
+      -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
       justify-content: space-between;
-      // position: relative;
     }
     &__lang-widget {
+      -webkit-box-ordinal-group: 4;
+      -ms-flex-order: 3;
       order: 3;
       margin: 0;
     }
     &__navigation {
-      order: 2;
-      margin: 0;
       position: absolute;
+      z-index: 10;
       left: 0%;
       right: 0%;
-      z-index: 10;
+      -webkit-box-ordinal-group: 3;
+      -ms-flex-order: 2;
+      order: 2;
+      margin: 0;
       &-btn {
-        display: block;
         position: absolute;
-        transform: translate(-50%, -50%);
         left: 50%;
+        display: block;
+        -webkit-transform: translate(-50%, -50%);
+        -ms-transform: translate(-50%, -50%);
+        transform: translate(-50%, -50%);
       }
       &-wrap {
         position: fixed;
         z-index: -1;
-        transform: translate(100%, 0);
+        top: 0;
         left: 0;
-        top: 0%;
         right: -100%;
-        width: 100%;
+        -webkit-transform: translate(100%, 0);
+        -ms-transform: translate(100%, 0);
+        transform: translate(100%, 0);
+        -webkit-transition: all 0.3s ease-in-out;
+        -o-transition: all 0.3s ease-in-out;
         transition: all 0.3s ease-in-out;
         border-bottom-left-radius: 40% 10px;
         border-bottom-right-radius: 60% 30px;
+        width: 100%;
         &.change {
-          transform: inherit;
           top: 80px;
           left: 0;
           right: 0;
-          background-color: $color__link-hover;
-          transition: all 0.3s ease-in-out;
           -webkit-transform: inherit;
-          -moz-transform: inherit;
           -ms-transform: inherit;
-          -o-transform: inherit;
+          transform: inherit;
+          -webkit-transition: all 0.3s ease-in-out;
+          -o-transition: all 0.3s ease-in-out;
+          transition: all 0.3s ease-in-out;
+          background-color: $color__link-hover;
+
           .header__navigation-menu {
             opacity: 1;
-            transition: all 1s ease-out;
             -webkit-transition: all 1s ease-out;
-            -moz-transition: all 1s ease-out;
-            -ms-transition: all 1s ease-out;
             -o-transition: all 1s ease-out;
+            transition: all 1s ease-out;
           }
         }
       }
       &-menu {
+        -webkit-box-orient: vertical;
+        -webkit-box-direction: normal;
+        -ms-flex-direction: column;
         flex-direction: column;
-        padding: 45px 40px;
         opacity: 0;
-        transition: all 1s ease-in;
         -webkit-transition: all 1s ease-in;
-        -moz-transition: all 1s ease-in;
-        -ms-transition: all 1s ease-in;
         -o-transition: all 1s ease-in;
+        transition: all 1s ease-in;
+        padding: 45px 40px;
+
         a {
           font-size: 1.125rem;
         }
