--- a/sass/components/content/_posts-and-pages.scss
+++ b/sass/components/content/_posts-and-pages.scss
@@ -1054,6 +1054,9 @@ main {
 }
 }
 @media only screen and (max-width: 480px) {
+  .header .custom-logo {
+    max-width: 120px;
+}
   .filter-main__dropdown--double-col :nth-child(1).filter-main__dropdown-list {
     margin-right: 10px;
   }
