--- a/sass/components/content/_posts-and-pages.scss
+++ b/sass/components/content/_posts-and-pages.scss
@@ -78,7 +78,6 @@ main {
     display: -webkit-box;
     display: -ms-flexbox;
     display: flex;
-    height: 65px;
     margin-bottom: 28px;
     button[type="submit"] {
       position: absolute;
@@ -109,7 +108,7 @@ main {
     width: 100%;
     height: 100%;
     &[type="text"] {
-      padding: 0 65px;
+      padding: 18.5px 65px;
       &::-webkit-input-placeholder {
         font-family: "Roboto";
         font-weight: 300;
@@ -233,6 +232,7 @@ main {
       padding: 0 40px 0 23px;
       background-color: $color-input-search-bg;
       font-size: 1.1875rem;
+      line-height: 3.9375rem;
       font-weight: 300;
       letter-spacing: 0.46px;
       text-align: left;
