--- a/sass/abstracts/variables/_colors.scss
+++ b/sass/abstracts/variables/_colors.scss
@@ -35,3 +35,4 @@ $color-number-light-grey: #3d393599;
 $color-text-green:#7bceb1;
 $hot-bg: #e0628754;
 $color-unactive-icon: #74716d;
+$icon-background:#787572;
