--- a/sass/abstracts/variables/_colors.scss
+++ b/sass/abstracts/variables/_colors.scss
@@ -8,7 +8,7 @@ $color__background-ins: #fff9c0;
 $color__text-screen: #21759b;
 $color__text-input: #666;
 $color__text-input-focus: #111;
-// $color__link: #4169e1; //royalblue
+
 $color__link-visited: #800080; //purple
 $color__link-hover:  #bc204b;
 $color__text-main: #404040;
@@ -35,3 +35,6 @@ $color-number-light-grey: #3d393599;
 $color-text-green:#7bceb1;
 $hot-bg: #e0628754;
 $color-unactive-icon: #74716d;
+$color-header-border: #8b8886;
+$color-white:#ffffff;
+$contact-us-btn-border:#df97ab;
