--- a/sass/components/content/_posts-and-pages.scss
+++ b/sass/components/content/_posts-and-pages.scss
@@ -112,27 +112,27 @@ main {
       &::-webkit-input-placeholder {
         font-family: "Roboto";
         font-weight: 300;
-        color: #63605c;
+        color: $color-text-search-field;
       }
       &::-moz-placeholder {
         font-family: "Roboto";
         font-weight: 300;
-        color: #63605c;
+        color: $color-text-search-field;
       }
       &:-ms-input-placeholder {
         font-family: "Roboto";
         font-weight: 300;
-        color: #63605c;
+        color: $color-text-search-field;
       }
       &::-ms-input-placeholder {
         font-family: "Roboto";
         font-weight: 300;
-        color: #63605c;
+        color: $color-text-search-field;
       }
       &::placeholder {
         font-family: "Roboto";
         font-weight: 300;
-        color: #63605c;
+        color: $color-text-search-field;
       }
     }
     -webkit-transition: all 0.3s ease-in;
@@ -251,8 +251,8 @@ main {
         -webkit-transition: all 0.3s ease-in;
         -o-transition: all 0.3s ease-in;
         transition: all 0.3s ease-in;
-        border-left: 1px solid #8b8886;
-        border-top: 1px solid #8b8886;
+        border-left: 1px solid $color-header-border;
+        border-top: 1px solid $color-header-border;
         width: 8px;
         height: 8px;
       }
@@ -276,7 +276,7 @@ main {
       border-radius: 30px;
       min-width: 100%;
       padding: 30px;
-      background-color: #fff;
+      background-color: $color-white;
     }
 
     &-list {
@@ -382,7 +382,7 @@ main {
         font-size: 0.6875rem;
         font-weight: 400;
         text-transform: uppercase;
-        color: #bc204b;
+        color: $color-text-title;
       }
     }
 
@@ -954,14 +954,14 @@ main {
     -webkit-transition: all 0.3s ease-in-out;
     -o-transition: all 0.3s ease-in-out;
     transition: all 0.3s ease-in-out;
-    border: 1px solid #df97ab;
+    border: 1px solid $contact-us-btn-border;
     border-radius: 28px;
     padding: 0 15px 0 15.5px;
     background-color: transparent;
     font-size: 0.9375rem;
     line-height: 38px;
     font-weight: 300;
-    color: #bc204b;
+    color: $color-text-title;
     &:hover {
       border-color: $color-text-title;
       background-color: $color-text-title;
