Fix add custom icon or add icon by url or direct download (#19)
* Fix add custom icon or add icon by url or direct download

* Fix code format changes and delete console,log from scripts

Co-authored-by: Bullkip <01sinister@mail.com>

--- a/sass/abstracts/variables/_colors.scss
+++ b/sass/abstracts/variables/_colors.scss
@@ -35,6 +35,7 @@ $color-number-light-grey: #3d393599;
 $color-text-green:#7bceb1;
 $hot-bg: #e0628754;
 $color-unactive-icon: #74716d;
+$icon-background:#787572;
 $color-header-border: #8b8886;
 $color-white:#ffffff;
 $contact-us-btn-border:#df97ab;
